--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,11 +1,7 @@
 name: Docker Image CI
 
 on:
-  push:
-    branches:
-      - 'main'
-    tags:
-      - 'v[0-9]+.[0-9]+.[0-9]+'
+  workflow_dispatch:
 
 env:
   IMAGE_NAME: ${{ github.repository }}
