--- a/.github/workflows/build-executable.yml
+++ b/.github/workflows/build-executable.yml
@@ -11,11 +11,13 @@ jobs:
       - name: Setup Go
         uses: actions/setup-go@v5
         with:
-          go-version: '1.21.x'
+          go-version: '1.23.x'
       - name: Install dependencies
         run: go get .
       - name: Build
-        run: go build -o youtube-mp3-bot
+        run: go build -ldflags '-extldflags "-static"' -o youtube-mp3-bot
+        env:
+            CGO_ENABLED: 0
       - name: Upload Go binary
         uses: actions/upload-artifact@v4
         with:
